--- a/WaterCompany/Views/Consumptions/Delete.cshtml
+++ b/WaterCompany/Views/Consumptions/Delete.cshtml
@@ -3,13 +3,24 @@
 @{
     ViewData["Title"] = "Delete";
 }
+<br />
+<br />
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h1 class="big-title1" style="text-align:center;"><i class="fas fa-folder-minus"></i> Delete Consumption</h1>
+<hr class="center-ball" />
+<br />
+<h3 style="text-align:center;"><b>Are you sure you want to delete this consumption?</b></h3>
+<br />
+<div class="centerform">
+    <form class="form123" asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <button type="submit" class="btn btn-outline-danger"><i class="fas fa-trash-alt"></i> Delete</button>
+        <a class="btn btn-outline-info" asp-action="Index"><i class="fas fa-backward"></i> Back to List</a>
+    </form>
+</div>
+<br />
+<br />
 <div>
-    <h4>Consumption</h4>
-    <hr class="center-ball" />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ConsumptionDate)
@@ -36,10 +47,4 @@
             @Html.DisplayFor(model => model.TotalConsumption)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
 </div>
