--- a/WaterCompany/Views/Consumptions/Details.cshtml
+++ b/WaterCompany/Views/Consumptions/Details.cshtml
@@ -3,40 +3,49 @@
 @{
     ViewData["Title"] = "Details";
 }
+<br />
+<br />
 
-<h1>Details</h1>
-
+<h1 class="big-title1" style="text-align:center;"><i class="fas fa-newspaper"></i> Consumption Details</h1>
+<hr class="center-ball" />
+<br />
+<div class="centerform">
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-success"><i class="fas fa-pen-square"></i> Edit</a>
+    <a class="btn btn-outline-primary" asp-action="Index"><i class="fas fa-backward"></i> Back to List</a>
+</div>
+<br />
+<br />
 <div>
-    <h4>Consumption</h4>
-    <hr class="center-ball" />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Client.FullName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Client.FullName)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ConsumptionDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ConsumptionDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Echelon)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Echelon)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.UnitaryValue)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.UnitaryValue)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TotalConsumption)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TotalConsumption)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
 </div>
