--- a/WaterCompany/Views/Consumptions/Index.cshtml
+++ b/WaterCompany/Views/Consumptions/Index.cshtml
@@ -3,51 +3,100 @@
 @{
     ViewData["Title"] = "Index";
 }
+<link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css" />
 
-<h1>Index</h1>
-<hr class="center-ball" />
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ConsumptionDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Echelon)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UnitaryValue)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TotalConsumption)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ConsumptionDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Echelon)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UnitaryValue)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TotalConsumption)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+<br />
+<br />
+<br />
+<br />
+<h1 class="big-title"><i class="fas fa-wallet"></i> Consumptions <br /><hr class="center-ball" /><br /><a asp-action="Create" class="btn btn-outline-primary"><i class="far fa-plus-square"></i> New Consumption</a></h1>
+<div class="table-responsive-sm">
+    <table id="example" class="table table-striped table-bordered" style="width:100%">
+        <thead>
+            <tr>
+                <th>
+                    <i class="fas fa-user"></i> @Html.DisplayNameFor(model => model.Client.FullName)
+                </th>
+                <th>
+                    <i class="fas fa-calendar-week"></i> @Html.DisplayNameFor(model => model.ConsumptionDate)
+                </th>
+                <th>
+                    <i class="fas fa-dollar-sign"></i> @Html.DisplayNameFor(model => model.Echelon)
+                </th>
+                <th>
+                    <i class="fas fa-dollar-sign"></i> @Html.DisplayNameFor(model => model.UnitaryValue)
+                </th>
+                <th>
+                    <i class="fas fa-money-bill-alt"></i> @Html.DisplayNameFor(model => model.TotalConsumption)
+                </th>
+                <th><i class="fas fa-filter"></i> Options</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Client.FullName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ConsumptionDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Echelon)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.UnitaryValue)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.TotalConsumption)
+                    </td>
+                    <td>
+                        <a style="width: 100px;" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-success"><i class="fas fa-pen-square"></i> Edit</a><br />
+                        <a style="width: 100px;" asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info"><i class="fas fa-info-circle"></i> Details</a><br />
+                        <a style="width: 100px;" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger"><i class="fas fa-trash-alt"></i> Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+        <tfoot>
+            <tr>
+                <th>
+                    <i class="fas fa-user"></i> @Html.DisplayNameFor(model => model.Client.FullName)
+                </th>
+                <th>
+                    <i class="fas fa-calendar-week"></i> @Html.DisplayNameFor(model => model.ConsumptionDate)
+                </th>
+                <th>
+                    <i class="fas fa-dollar-sign"></i> @Html.DisplayNameFor(model => model.Echelon)
+                </th>
+                <th>
+                    <i class="fas fa-dollar-sign"></i> @Html.DisplayNameFor(model => model.UnitaryValue)
+                </th>
+                <th>
+                    <i class="fas fa-money-bill-alt"></i> @Html.DisplayNameFor(model => model.TotalConsumption)
+                </th>
+                <th><i class="fas fa-filter"></i> Options</th>
+            </tr>
+        </tfoot>
+    </table>
+</div>
+
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+
+@section Scripts{
+    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#MyTable').DataTable();
+        });
+    </script>
 }
-    </tbody>
-</table>
