Update Consumptions Update Invoices

--- a/WaterCompany/Views/Contracts/Index.cshtml
+++ b/WaterCompany/Views/Contracts/Index.cshtml
@@ -9,7 +9,7 @@
 <br />
 <br />
 <br />
-<h1 class="big-title"><i class="fas fa-file-alt"></i> Contracts <br /><hr class="center-ball" /><br /><a asp-action="Create" asp-controller="Contracts" class="btn btn-outline-primary"><i class="far fa-plus-square"></i> New Contract</a></h1>
+<h1 class="big-title"><i class="fas fa-file-signature"></i> Contracts <br /><hr class="center-ball" /><br /><a asp-action="Create" asp-controller="Contracts" class="btn btn-outline-primary"><i class="far fa-plus-square"></i> New Contract</a></h1>
 <div class="table-responsive-sm">
     <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
