--- a/WaterCompany/Views/Employees/Index.cshtml
+++ b/WaterCompany/Views/Employees/Index.cshtml
@@ -9,7 +9,7 @@
 <br />
 <br />
 <br />
-<h1 class="big-title"><i class="fas fa-users-cog"></i> Employees <br /><hr class="center-ball" /><br /><a asp-action="Register" asp-controller="Account" class="btn btn-outline-primary"><i class="far fa-plus-square"></i> New Employee</a></h1>
+<h1 class="big-title"><i class="fas fa-user-secret"></i> Employees <br /><hr class="center-ball" /><br /><a asp-action="Register" asp-controller="Account" class="btn btn-outline-primary"><i class="far fa-plus-square"></i> New Employee</a></h1>
 
 <div class="table-responsive-sm">
     <table id="example" class="table table-striped table-bordered" style="width: 100%;">
