--- a/WaterCompany/Views/Invoices/Index.cshtml
+++ b/WaterCompany/Views/Invoices/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WaterCompany.Data.Entities.Consumption>
+﻿@model IEnumerable<WaterCompany.Data.Entities.Invoice>
 
 @{
     ViewData["Title"] = "Index";
@@ -9,7 +9,7 @@
 <br />
 <br />
 <br />
-<h1 class="big-title"><i class="fas fa-wallet"></i> Consumptions <br /><hr class="center-ball" /><br /><a asp-action="Create" class="btn btn-outline-primary"><i class="far fa-plus-square"></i> New Consumption</a></h1>
+<h1 class="big-title"><i class="fas fa-file-invoice-dollar"></i> Invoices <br /><hr class="center-ball" /><br /></h1>
 <div class="table-responsive-sm">
     <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
@@ -18,16 +18,19 @@
                     <i class="fas fa-user"></i> @Html.DisplayNameFor(model => model.Client.FullName)
                 </th>
                 <th>
-                    <i class="fas fa-calendar-week"></i> @Html.DisplayNameFor(model => model.ConsumptionDate)
+                    <i class="fas fa-calendar-week"></i> @Html.DisplayNameFor(model => model.InvoiceDate)
                 </th>
                 <th>
-                    <i class="fas fa-dollar-sign"></i> @Html.DisplayNameFor(model => model.Echelon)
+                    <i class="fas fa-calendar-week"></i> @Html.DisplayNameFor(model => model.Consumption.Echelon)
                 </th>
                 <th>
-                    <i class="fas fa-dollar-sign"></i> @Html.DisplayNameFor(model => model.UnitaryValue)
+                    <i class="fas fa-calendar-week"></i> @Html.DisplayNameFor(model => model.Consumption.UnitaryValue)
                 </th>
                 <th>
-                    <i class="fas fa-money-bill-alt"></i> @Html.DisplayNameFor(model => model.TotalConsumption)
+                    <i class="far fa-credit-card"></i> @Html.DisplayNameFor(model => model.Total)
+                </th>
+                <th>
+                    <i class="fas fa-question"></i> @Html.DisplayNameFor(model => model.IsPaid)
                 </th>
                 <th><i class="fas fa-filter"></i> Options</th>
             </tr>
@@ -40,22 +43,23 @@
                         @Html.DisplayFor(modelItem => item.Client.FullName)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.ConsumptionDate)
+                        @Html.DisplayFor(modelItem => item.InvoiceDate)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Echelon)
+                        @Html.DisplayFor(modelItem => item.Consumption.Echelon)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.UnitaryValue)
+                        @Html.DisplayFor(modelItem => item.Consumption.UnitaryValue)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.TotalConsumption)
+                        @Html.DisplayFor(modelItem => item.Total)
                     </td>
                     <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-success"><i class="fas fa-pen-square"></i> Edit</a>
+                        @Html.DisplayFor(modelItem => item.IsPaid)
+                    </td>
+                    <td>
                         <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info"><i class="fas fa-info-circle"></i> Details</a>
                         <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger"><i class="fas fa-trash-alt"></i> Delete</a>
-                        <a asp-action="GenerateInvoice" asp-route-id="@item.Id" class="btn btn-outline-secondary"><i class="fas fa-file-invoice-dollar"></i> Generate Invoice</a>
                     </td>
                 </tr>
             }
@@ -66,16 +70,19 @@
                     <i class="fas fa-user"></i> @Html.DisplayNameFor(model => model.Client.FullName)
                 </th>
                 <th>
-                    <i class="fas fa-calendar-week"></i> @Html.DisplayNameFor(model => model.ConsumptionDate)
+                    <i class="fas fa-calendar-week"></i> @Html.DisplayNameFor(model => model.InvoiceDate)
                 </th>
                 <th>
-                    <i class="fas fa-dollar-sign"></i> @Html.DisplayNameFor(model => model.Echelon)
+                    <i class="fas fa-calendar-week"></i> @Html.DisplayNameFor(model => model.Consumption.Echelon)
                 </th>
                 <th>
-                    <i class="fas fa-dollar-sign"></i> @Html.DisplayNameFor(model => model.UnitaryValue)
+                    <i class="fas fa-calendar-week"></i> @Html.DisplayNameFor(model => model.Consumption.UnitaryValue)
                 </th>
                 <th>
-                    <i class="fas fa-money-bill-alt"></i> @Html.DisplayNameFor(model => model.TotalConsumption)
+                    <i class="far fa-credit-card"></i> @Html.DisplayNameFor(model => model.Total)
+                </th>
+                <th>
+                    <i class="fas fa-question"></i> @Html.DisplayNameFor(model => model.IsPaid)
                 </th>
                 <th><i class="fas fa-filter"></i> Options</th>
             </tr>
