--- a/WaterCompany/Views/Shared/_Layout.cshtml
+++ b/WaterCompany/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                                 </div>
                             </li>
                         }
-                        @if (this.User.Identity.IsAuthenticated && this.User.IsInRole("Employee"))
+                       @if (this.User.Identity.IsAuthenticated && this.User.IsInRole("Employee"))
                         {
                             <li class="nav-item dropdown nav-user">
                                 <a style="color: #343a40; cursor: pointer;" class="dropdown-toggle nav-link nav-user-img" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-sync"></i> Management</a>
@@ -73,7 +73,7 @@
                                     <a class="dropdown-item" asp-controller="Clients" asp-action="Index"><i class="fas fa-users"></i> Clients</a>
                                     <a class="dropdown-item" asp-controller="Employees" asp-action="Index"><i class="fas fa-user-secret"></i> Employees</a>
                                     <a class="dropdown-item" asp-controller="Invoices" asp-action="Index"><i class="fas fa-file-invoice-dollar"></i> Invoices</a>
-                                    <a class="dropdown-item" asp-controller="Consumptions" asp-action="Index"><i class="fas fa-tint"></i> Consumptions</a>
+                                    <a class="dropdown-item" asp-controller="Consumptions" asp-action="Index"><i class="fas fa-wallet"></i> Consumptions</a>
                                     <a class="dropdown-item" asp-controller="Orders" asp-action="Index"><i class="fas fa-sort-amount-down"></i> Orders</a>
                                 </div>
                             </li>
