--- a/WaterCompany/Views/Consumptions/Details.cshtml
+++ b/WaterCompany/Views/Consumptions/Details.cshtml
@@ -15,7 +15,7 @@
 </div>
 <br />
 <br />
-<div>
+@*<div>
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Client.FullName)
@@ -48,4 +48,4 @@
             @Html.DisplayFor(model => model.TotalConsumption)
         </dd>
     </dl>
-</div>
+</div>*@
