--- a/WaterCompany/Views/Shared/_Layout.cshtml
+++ b/WaterCompany/Views/Shared/_Layout.cshtml
@@ -39,6 +39,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Home" asp-action="ContactUs"><i class="fas fa-envelope"></i> Contact Us</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Consumptions" asp-action="ClientConsumptions"><i class="fas fa-wallet"></i> Consumptions</a>
+                            </li>
                         }
                         else
                         {
