--- a/WaterCompany/Views/Clients/Edit.cshtml
+++ b/WaterCompany/Views/Clients/Edit.cshtml
@@ -1,101 +1,101 @@
 ﻿@model WaterCompany.Models.ClientViewModel
-
 @{
     ViewData["Title"] = "Edit";
 }
-
 <link href="~/css/changeUser.css" rel="stylesheet" />
 <br />
 <br />
 @if (this.User.IsInRole("Admin"))
 {
-    <h1 style="text-align:center;" class="big-title1"><i class="fas fa-eraser"></i> Edit Client</h1>
+    <h1 style="text-align:center;" class="big-title1"><i class="fas fa-eraser"></i> Edit Employee</h1>
 }
 @if (this.User.IsInRole("Client"))
 {
     <h1 class="big-title1" align="center"><i class="fas fa-exchange-alt"></i> Manage Account</h1>
 }
-    <hr class="center-ball" />
+<hr class="center-ball" />
 <div class="text-success text-center">@ViewBag.ClientMessage</div>
-    <form class="centerform" method="post">
-        <div asp-validation-summary="ModelOnly"></div>
-        <input type="hidden" asp-for="ImageId" />
-        <div class="wrapper bg-white mt-sm-5">
-            <b>Profile Photo</b><br />
-            <p style="font-size: 15px; color: gray;" class="text-center card-text centerform">Preferably accepted file type .png</p>
-            <div class="form-group">
+<form asp-action="Edit" enctype="multipart/form-data" class="centerform">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <input type="hidden" asp-for="Id" />
+    <input type="hidden" asp-for="ImageId" />
+    <div class="wrapper bg-white mt-sm-5">
+        <div class="row py-1">
+            <div class="col-md-12 pt-md-0 pt-3">
+                <label style="font-weight: bold; text-align: center;" asp-for="ImageFile" class="control-label text-center"></label><br /><br />
                 <input asp-for="ImageFile" class="form-control" type="file" placeholder="" />
                 <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
-            <br />
-            <div class="form-group">
-                <img class="user-avatar-md" src="@Url.Content(Model.ImageFullPath)" alt="Image" style="width: auto; height: 70px;" />
+        </div>
+        <br />
+        <div class="form-group">
+            <img class="user-avatar-md" src="@Url.Content(Model.ImageFullPath)" alt="Image" style="text-align: center; width: auto; height: 70px;" />
+        </div>
+        <br />
+        <div class="py-2">
+            <div class="row py-2">
+                <div class="col-md-6">
+                    <label asp-for="FirstName" class="control-label"></label>
+                    <input asp-for="FirstName" class="form-control" />
+                    <span asp-validation-for="FirstName" class="text-danger"></span>
+                </div>
+                <div class="col-md-6 pt-md-0 pt-3">
+                    <label asp-for="LastName" class="control-label"></label>
+                    <input asp-for="LastName" class="form-control" />
+                    <span asp-validation-for="LastName" class="text-danger"></span>
+                </div>
             </div>
-            <div class="py-2">
-                <div class="row py-2">
-                    <div class="col-md-6">
-                        <label asp-for="FirstName" class="control-label"></label>
-                        <input asp-for="FirstName" class="form-control" />
-                        <span asp-validation-for="FirstName" class="text-danger"></span>
-                    </div>
-                    <div class="col-md-6 pt-md-0 pt-3">
-                        <label asp-for="LastName" class="control-label"></label>
-                        <input asp-for="LastName" class="form-control" />
-                        <span asp-validation-for="LastName" class="text-danger"></span>
-                    </div>
+            <div class="row py-2">
+                <div class="col-md-6">
+                    <label class="form-label" asp-for="PhoneNumber">Phone Number</label>
+                    <input asp-for="PhoneNumber" class="form-control text-center" />
+                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
                 </div>
-                <div class="row py-2">
-                    <div class="col-md-6">
-                        <label class="form-label" asp-for="PhoneNumber">Phone Number</label>
-                        <input asp-for="PhoneNumber" class="form-control text-center" />
-                        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-                    </div>
-                    <div class="col-md-6">
-                        <label asp-for="Address" class="control-label"></label>
-                        <input asp-for="Address" class="form-control text-center" />
-                        <span asp-validation-for="Address" class="text-danger"></span>
-                    </div>
+                <div class="col-md-6">
+                    <label asp-for="Address" class="control-label"></label>
+                    <input asp-for="Address" class="form-control text-center" />
+                    <span asp-validation-for="Address" class="text-danger"></span>
                 </div>
-                <div class="row py-2">
-                    <div class="col-md-6 pt-md-0 pt-3">
-                        <label class="form-label" asp-for="Email">Email</label>
-                        <input asp-for="Email" class="form-control text-center" />
-                        <span asp-validation-for="Email" class="text-danger"></span>
-                    </div>
-                    <div class="col-md-6">
-                        <label asp-for="TIN" class="control-label"></label>
-                        <input asp-for="TIN" class="form-control" />
-                        <span asp-validation-for="TIN" class="text-danger"></span>
-                    </div>
+            </div>
+            <div class="row py-2">
+                <div class="col-md-6 pt-md-0 pt-3">
+                    <label class="form-label" asp-for="Email">Email</label>
+                    <input asp-for="Email" class="form-control text-center" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
-                <div class="row py-1">
-                    <div class="col-md-12 pt-md-0 pt-3">
-                        <label asp-for="PostalCode" class="control-label"></label>
-                        <input asp-for="PostalCode" class="form-control" />
-                    </div>
+                <div class="col-md-6">
+                    <label asp-for="TIN" class="control-label"></label>
+                    <input asp-for="TIN" class="form-control" />
+                    <span asp-validation-for="TIN" class="text-danger"></span>
                 </div>
-                <br />
-                <div class="py-3 pb-4 centerform">
-                    <button type="submit" value="Save" class="btn btn-outline-primary"><i class="fas fa-save"></i> Save</button>
-                    @if (this.User.IsInRole("Admin"))
-                    {
-                        <a class="btn btn-outline-info" asp-action="Index"><i class="fas fa-backward"></i> Back to List</a>
-                    }
-                    @if (this.User.IsInRole("Client"))
-                    {
-                        <a asp-action="ChangePassword" asp-controller="Account" class="btn btn-outline-success"><i class="fas fa-key"></i> Change Password</a>
-                    }
+            </div>
+            <div class="row py-1">
+                <div class="col-md-12 pt-md-0 pt-3">
+                    <label asp-for="PostalCode" class="control-label"></label>
+                    <input asp-for="PostalCode" class="form-control" />
                 </div>
+            </div>
+            <br />
+            <div class="py-3 pb-4 centerform">
+                <button type="submit" value="Save" class="btn btn-outline-primary"><i class="fas fa-save"></i> Save</button>
+                @if (this.User.IsInRole("Admin"))
+                {
+                    <a class="btn btn-outline-info" asp-action="Index"><i class="fas fa-backward"></i> Back to List</a>
+                }
+                @if (this.User.IsInRole("Client"))
+                {
+                    <a asp-action="ChangePassword" asp-controller="Account" class="btn btn-outline-success"><i class="fas fa-key"></i> Change Password</a>
+                }
             </div>
         </div>
-    </form>
-    <br />
-    <br />
-    <br />
+    </div>
+</form>
+<br />
+<br />
+<br />
 
-
-    @section Scripts {
+@section Scripts {
     @{
-            await Html.RenderPartialAsync("_ValidationScriptsPartial");
-        }
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
     }
