--- a/WaterCompany/Views/Consumptions/ClientConsumptions.cshtml
+++ b/WaterCompany/Views/Consumptions/ClientConsumptions.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<WaterCompany.Data.Entities.Consumption>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "ClientConsumptions";
 }
 <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css" />
 
@@ -9,9 +9,9 @@
 <br />
 <br />
 <br />
-<h1 class="big-title"><i class="fas fa-wallet"></i> Consumptions <br /><hr class="center-ball" /><br /><a asp-action="Create" class="btn btn-outline-primary"><i class="far fa-plus-square"></i> New Consumption</a></h1>
+<h1 class="big-title"><i class="fas fa-wallet"></i> Consumptions <br /><hr class="center-ball" /><br /></h1>
 <div class="table-responsive-sm">
-   @* <table id="example" class="table table-striped table-bordered" style="width:100%">
+  @*  <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
                 <th>
@@ -52,10 +52,7 @@
                         @Html.DisplayFor(modelItem => item.TotalConsumption)
                     </td>
                     <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-success"><i class="fas fa-pen-square"></i> Edit</a>
                         <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info"><i class="fas fa-info-circle"></i> Details</a>
-                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger"><i class="fas fa-trash-alt"></i> Delete</a>
-                        <a asp-action="GenerateInvoice" asp-route-id="@item.Id" class="btn btn-outline-secondary"><i class="fas fa-file-invoice-dollar"></i> Generate Invoice</a>
                     </td>
                 </tr>
             }
@@ -80,7 +77,7 @@
                 <th><i class="fas fa-filter"></i> Options</th>
             </tr>
         </tfoot>
-    </table>*@
+    </table*@>
 </div>
 
 <br />
