--- a/WaterCompany/Views/Employees/Edit.cshtml
+++ b/WaterCompany/Views/Employees/Edit.cshtml
@@ -1,5 +1,4 @@
 ﻿@model WaterCompany.Models.EmployeeViewModel
-
 @{
     ViewData["Title"] = "Edit";
 }
@@ -8,27 +7,31 @@
 <br />
 @if (this.User.IsInRole("Admin"))
 {
-    <h1 style="text-align:center;" class="big-title1"><i class="fas fa-eraser"></i> Edit Client</h1>
+    <h1 style="text-align:center;" class="big-title1"><i class="fas fa-eraser"></i> Edit Employee</h1>
 }
 @if (this.User.IsInRole("Employee"))
 {
     <h1 class="big-title1" align="center"><i class="fas fa-exchange-alt"></i> Manage Account</h1>
 }
 <hr class="center-ball" />
-<form class="centerform" method="post">
-    <div asp-validation-summary="ModelOnly"></div>
+<div class="text-success text-center">@ViewBag.EmployeeMessage</div>
+<form asp-action="Edit" enctype="multipart/form-data" class="centerform">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <input type="hidden" asp-for="Id" />
     <input type="hidden" asp-for="ImageId" />
     <div class="wrapper bg-white mt-sm-5">
-        <b>Profile Photo</b><br />
-        <p style="font-size: 15px; color: gray;" class="text-center card-text centerform">Preferably accepted file type .png</p>
-        <div class="form-group">
-            <input asp-for="ImageFile" class="form-control" type="file" placeholder="" />
-            <span asp-validation-for="ImageFile" class="text-danger"></span>
+        <div class="row py-1">
+            <div class="col-md-12 pt-md-0 pt-3">
+                <label style="font-weight: bold; text-align: center;" asp-for="ImageFile" class="control-label text-center"></label><br /><br />
+                <input asp-for="ImageFile" class="form-control" type="file" placeholder="" />
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
+            </div>
         </div>
         <br />
         <div class="form-group">
-            <img class="user-avatar-md" src="@Url.Content(Model.ImageFullPath)" alt="Image" style="width: auto; height: 70px;" />
+            <img class="user-avatar-md" src="@Url.Content(Model.ImageFullPath)" alt="Image" style="text-align: center; width: auto; height: 70px;" />
         </div>
+        <br />
         <div class="py-2">
             <div class="row py-2">
                 <div class="col-md-6">
@@ -90,7 +93,6 @@
 <br />
 <br />
 <br />
-
 
 @section Scripts {
     @{
