--- a/WaterCompany/Views/Consumptions/GenerateInvoice.cshtml
+++ b/WaterCompany/Views/Consumptions/GenerateInvoice.cshtml
@@ -18,7 +18,7 @@
                     <br />
                     <div class="form-group">
                         <label asp-for="ClientId" class="control-label"></label>
-                        <select asp-for="ClientId" asp-items="Model.Clients" class="form-control text-center" disabled="true"></select>
+                        <select asp-for="ClientId" asp-items="Model.Clients" class="form-control text-center"></select>
                     </div>
                     <div class="form-group">
                         <label asp-for="ConsumptionDate" class="control-label"></label>
