--- a/WaterCompany/Views/Invoices/Index.cshtml
+++ b/WaterCompany/Views/Invoices/Index.cshtml
@@ -58,8 +58,7 @@
                         @Html.DisplayFor(modelItem => item.IsPaid)
                     </td>
                     <td>
-                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info"><i class="fas fa-info-circle"></i> Details</a>
-                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger"><i class="fas fa-trash-alt"></i> Delete</a>
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-success"><i class="fas fa-pen-fancy"></i> Edit</a>
                     </td>
                 </tr>
             }
